src/snapshots/calculator__snapshot_tests__lexer_tests@zero.toy.snap
---
source: src/snapshot_tests.rs
expression: output
input_file: test_inputs/lexer/zero.toy
---
[
  Ok(KeywordVar),
  Ok(Identifier("y")),
  Ok(Assign),
  Ok(Integer("0")),
  Ok(Semicolon),
]
