src/snapshots/calculator__snapshot_tests__reporting_tests@invalid_eof.toy.snap
---
source: src/snapshot_tests.rs
expression: "String::from_utf8(output).unwrap()"
input_file: src/snapshot_tests/reporting/invalid_eof.toy
---
Error: Unexpected end of file
   ╭─[myscript.toy:1:1]
   │
 1 │ var x =
   │        │ 
   │        ╰─ End of file not expected here
   │ 
   │ Note: Note: expected one of tokens "identifier", "int", "("
───╯
